<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainChoice">

    <ImageView
        android:id="@+id/im_robot"
        android:layout_width="305dp"
        android:layout_height="259dp"
        android:layout_gravity="bottom"
        android:visibility="invisible"
        android:contentDescription="@string/robot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:contentDescription="@string/blind"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/fon2" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:letterSpacing="0.07"
                android:text="@string/purchase"
                android:textColor="#01431a"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView10"
                app:layout_constraintEnd_toEndOf="@+id/imageView10"
                app:layout_constraintStart_toStartOf="@+id/imageView10"
                app:layout_constraintTop_toTopOf="parent" />

        </FrameLayout>

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="80dp"
            android:layout_height="80dp"

            android:contentDescription="@string/registr"
            android:rotation="-296"
            android:text="@string/button_registr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19999999"
            app:srcCompat="@mipmap/ic_launcher19_foreground" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/money"
            android:rotation="-28"
            android:rotationX="-4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.92"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26999998"
            app:srcCompat="@mipmap/ic_launcher19_foreground" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/money"
            android:rotation="35"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.81"
            app:srcCompat="@mipmap/ic_launcher19_foreground" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageButton
                        android:id="@+id/button13"
                        android:layout_width="200dp"
                        android:layout_height="80dp"
                        android:background="@drawable/shadow2"
                        android:contentDescription="@string/currency"
                        android:stateListAnimator="@null"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.509"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.404"
                        tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/text_va"
                        android:layout_width="200dp"
                        android:layout_height="80dp"
                        android:gravity="center"
                        android:letterSpacing="0.07"
                        android:text="@string/currency2"
                        android:textColor="#001A0A"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/button13"
                        app:layout_constraintEnd_toEndOf="@+id/button13"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/button13"
                        app:layout_constraintTop_toTopOf="@+id/button13"
                        app:layout_constraintVertical_bias="1.0"
                        tools:ignore="TextContrastCheck" />

                </FrameLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                </Space>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageButton
                        android:id="@+id/button14"
                        android:layout_width="200dp"
                        android:layout_height="80dp"
                        android:background="@drawable/shadow2"
                        android:contentDescription="@string/futures"


                        android:stateListAnimator="@null"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.515"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.603"
                        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="200dp"
                        android:layout_height="80dp"
                        android:gravity="center"
                        android:letterSpacing="0.07"
                        android:text="@string/futures2"
                        android:textColor="#001A0A"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/button14"
                        app:layout_constraintEnd_toEndOf="@+id/button14"
                        app:layout_constraintHorizontal_bias="0.857"
                        app:layout_constraintStart_toStartOf="@+id/button14"
                        app:layout_constraintTop_toTopOf="@+id/button14"
                        app:layout_constraintVertical_bias="1.0" />

                </FrameLayout>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                </Space>





                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageButton
                        android:id="@+id/button23"
                        android:layout_width="200dp"
                        android:layout_height="80dp"
                        android:background="@drawable/shadow2"
                        android:contentDescription="@string/bonds"


                        android:stateListAnimator="@null"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.523"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/imageView10"
                        app:layout_constraintVertical_bias="0.254"
                        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

                    <TextView
                        android:id="@+id/text_ob"
                        android:layout_width="200dp"
                        android:layout_height="80dp"
                        android:gravity="center"
                        android:letterSpacing="0.07"
                        android:text="@string/bonds2"
                        android:textColor="#001A0A"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/button23"
                        app:layout_constraintEnd_toEndOf="@+id/button23"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/button23"
                        app:layout_constraintTop_toTopOf="@+id/button23"
                        app:layout_constraintVertical_bias="1.0" />

                </FrameLayout>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                </Space>


                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageButton
                        android:id="@+id/button20"
                        android:layout_width="200dp"
                        android:layout_height="80dp"
                        android:background="@drawable/shadow2"


                        android:contentDescription="@string/stocks"
                        android:stateListAnimator="@null"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.49"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.203" />

                    <TextView
                        android:id="@+id/text_ac"
                        android:layout_width="200dp"
                        android:layout_height="80dp"
                        android:gravity="center"
                        android:letterSpacing="0.07"
                        android:text="@string/stocks2"
                        android:textColor="#001A0A"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/button20"
                        app:layout_constraintEnd_toEndOf="@+id/button20"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/button20"
                        app:layout_constraintTop_toTopOf="@+id/button20"
                        app:layout_constraintVertical_bias="1.0" />
                </FrameLayout>

            </LinearLayout>
        </ScrollView>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="ObsoleteLayoutParam">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:contentDescription="@string/bottom_curtain"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/fon" />

            <ImageButton
                android:id="@+id/im_port"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView6"
                app:layout_constraintHorizontal_bias="0.17"
                app:layout_constraintStart_toStartOf="@+id/imageView6"
                app:layout_constraintTop_toTopOf="@+id/imageView6"
                android:background="?android:selectableItemBackground"
                app:layout_constraintVertical_bias="0.76"
                app:srcCompat="@mipmap/port3_foreground" />

            <ImageButton
                android:id="@+id/imageButtonPersonne"
                android:layout_width="77dp"
                android:layout_height="71dp"
                android:contentDescription="@string/todo"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                app:layout_constraintEnd_toEndOf="@+id/imageView6"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toStartOf="@+id/imageView6"
                app:layout_constraintTop_toTopOf="@+id/imageView6"
                android:background="?android:selectableItemBackground"
                app:layout_constraintVertical_bias="0.51"

                app:srcCompat="@mipmap/profile3_foreground" />

            <ImageButton
                android:id="@+id/imageButtonRun"
                android:layout_width="85dp"
                android:layout_height="69dp"
                android:contentDescription="@string/todo"

                android:background="?android:selectableItemBackground"
                app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                app:layout_constraintEnd_toEndOf="@+id/imageView6"
                app:layout_constraintHorizontal_bias="0.837"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView6"
                app:srcCompat="@mipmap/rown_foreground" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>


