<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainAuthorization">

    <View
        android:id="@+id/view"
        android:layout_width="411dp"
        android:layout_height="512dp"
        android:background="@drawable/rectangle_40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </View>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:id="@+id/space2"
            android:layout_width="400dp"
            android:layout_height="39dp">

        </Space>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100000024">

            <View
                android:id="@+id/view2"
                android:layout_width="250dp"
                android:layout_height="220dp"
                android:background="@drawable/rectangle_41"
                app:layout_constraintBottom_toBottomOf="@+id/view3"
                app:layout_constraintEnd_toEndOf="@+id/view3"
                app:layout_constraintStart_toStartOf="@+id/view3"
                app:layout_constraintTop_toTopOf="@+id/view3">

            </View>

            <View
                android:id="@+id/view3"
                android:layout_width="250dp"
                android:layout_height="220dp"
                android:background="@drawable/rectangle_51"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

            </View>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="249dp"
                android:layout_height="58dp"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:letterSpacing="0.05"
                android:text="@string/entrancedecor"
                android:textColor="#01431a"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/view2"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintHorizontal_bias="0.888"
                app:layout_constraintStart_toStartOf="@+id/view2"
                app:layout_constraintTop_toTopOf="@+id/view2"
                app:layout_constraintVertical_bias="1.0" />


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintBottom_toBottomOf="@+id/view2"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="@+id/view2"
                app:layout_constraintTop_toTopOf="@+id/view2"
                app:layout_constraintVertical_bias="0.611"
                app:srcCompat="@mipmap/ic_launcher12_foreground"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout7"
            app:layout_constraintVertical_bias="0.0">

            <View
                android:id="@+id/view6"
                android:layout_width="295dp"
                android:layout_height="61dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="28dp"
                android:background="@drawable/rectangle_2"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.458">

            </View>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="60dp"
                android:layout_height="59dp"
                app:layout_constraintBottom_toBottomOf="@+id/view6"
                app:layout_constraintEnd_toEndOf="@+id/view6"
                app:layout_constraintHorizontal_bias="0.982"
                app:layout_constraintStart_toStartOf="@+id/view6"
                app:layout_constraintTop_toTopOf="@+id/view6"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@mipmap/ic_launcher14_foreground"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="224dp"
                android:layout_height="63dp"
                android:ems="10"
                android:hint="E-mail"
                android:inputType="textEmailAddress"
                android:textColor="#898181"
                android:textSize="18sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/view6"
                app:layout_constraintEnd_toStartOf="@+id/imageView3"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/view6"
                app:layout_constraintTop_toTopOf="@+id/view6"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="36dp">

        </Space>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout9"
            app:layout_constraintVertical_bias="0.16000003">

            <View
                android:id="@+id/view4"
                android:layout_width="297dp"
                android:layout_height="57dp"
                android:layout_marginBottom="28dp"
                android:background="@drawable/rectangle_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </View>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="64dp"
                android:layout_height="54dp"
                app:layout_constraintBottom_toBottomOf="@+id/view4"
                app:layout_constraintEnd_toEndOf="@+id/view4"
                app:layout_constraintHorizontal_bias="0.991"
                app:layout_constraintStart_toStartOf="@+id/view4"
                app:layout_constraintTop_toTopOf="@+id/view4"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@mipmap/ic_launcher15_foreground"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="224dp"
                android:layout_height="63dp"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="#898181"
                android:textSize="18sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/view4"
                app:layout_constraintEnd_toStartOf="@+id/imageView4"
                app:layout_constraintStart_toStartOf="@+id/view4"
                app:layout_constraintTop_toTopOf="@+id/view4" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout10"
            android:layout_gravity="center"
            app:layout_constraintVertical_bias="0.0">

            <ImageButton
                android:id="@+id/btn_enter"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="180dp"
                android:layout_height="56dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rectangle_47"
                android:contentDescription="@string/enter"
                android:text="@string/enter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck">

            </ImageButton>


            <TextView
                android:id="@+id/textView7"
                android:layout_width="180dp"
                android:layout_height="53dp"
                android:gravity="center"
                android:letterSpacing="0.07"
                android:text="@string/entrance"
                android:textColor="#01431a"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/btn_enter"
                app:layout_constraintEnd_toEndOf="@+id/btn_enter"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/btn_enter"
                app:layout_constraintTop_toTopOf="@+id/btn_enter"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout11"
            app:layout_constraintVertical_bias="0.01999998">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:letterSpacing="0.05"
                android:text="@string/account"
                android:textColor="#575656"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout13"
            app:layout_constraintVertical_bias="0.060000002">

            <Button
                android:id="@+id/btn_filt"
                android:layout_width="208dp"
                android:layout_height="50dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/description_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textacc"
                android:layout_width="163dp"
                android:layout_height="36dp"
                android:contentDescription="@string/description_account"
                android:fontFamily="sans-serif"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/account2"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_filt"
                app:layout_constraintEnd_toEndOf="@+id/btn_filt"
                app:layout_constraintHorizontal_bias="0.571"
                app:layout_constraintStart_toStartOf="@+id/btn_filt"
                app:layout_constraintTop_toTopOf="@+id/btn_filt"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

